--- a/themes/JustNews/index.html
+++ b/themes/JustNews/index.html
@@ -172,7 +172,7 @@
 
 					<div id="linkcat-0" class="widget widget_links">
 						<h3 class="widget-title">
-							<span>链接</span></h3>
+							<span>友链</span></h3>
 						<ul class='xoxo blogroll'>
 							{{ #widgetLinkList }}
 									<li><a href="{{ &url }}" target="_blank">{{ &title }}</a></li>
